tests/query_errors/pipeline_unknown_port/error.txt
Error: 
    9 | select event from passthrough/snot into out;
      |                   ^^^^^^^^^^^ Stream used in `from` or `into` is not defined: passthrough/snot